--- a/index.html.html
+++ b/index.html.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="box">
-        <p>Você me ama? Amorzinho hoje ? </p>
+        <p> Aceita sair comigo? </p>
         <div class="buttons-container">
             <button><a href="https://www.google.com/search?q=noice&oq=noice&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQABiABDIHCAIQABiABDIHCAMQABiABDIHCAQQABiABDIHCAUQABiABDIJCAYQABgKGIAEMgkIBxAAGAoYgAQyCQgIEAAYChiABDIJCAkQABgKGIAE0gEHOTQxajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#fpstate=ive&vld=cid:c000df66,vid:a8c5wmeOL9o">Sim</a></button>
             <button id="no">Não</button>
